# KG-RAG

./: .env.example  .gitignore  1.sh  CLAUDE.md  Dockerfile  README.md  architecture.md  docker-compose.yml  langgraph.json  pyproject.toml  pytest.ini
frontend/: .prettierignore  BUGS.md  Dockerfile  eslint.config.js  package.json  tailwind.config.mjs
frontend/src/: md-editor-rt-internal.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/components/: ChatInterface.tsx  ChatMessage.tsx  FileViewDialog.tsx  GhostMessage.tsx  LiveTimer.tsx  MarkdownContent.tsx  MermaidDiagram.tsx  (+11 more)
frontend/src/lib/: api.ts  auth-api.ts  auth.ts  fetch-utils.ts  graph-api.ts  graph-constants.ts  sse.ts
frontend/src/providers/: ChatProvider.tsx
scripts/: neo4j_dump.sh  preprocess.py  test_agent.py
src/kg_rag/: __init__.py  __main__.py  asgi.py  config.py  main.py  models.py  server.py  utils.py
src/kg_rag/agent/: __init__.py  graph.py  prompts.py  state.py
src/kg_rag/api/: __init__.py  app.py  auth.py  schemas.py  service.py  session_store.py
src/kg_rag/ingest/: __init__.py  chunking.py  extract.py
src/kg_rag/memory/: __init__.py  profile.py  proposal.py
src/kg_rag/storage/: __init__.py  base.py  nano_vector.py  neo4j_graph.py
src/kg_rag/tools/: __init__.py  graph_query.py  vector_search.py  web_search.py
tests/: conftest.py  test_agent_graph.py  test_chunking.py  test_connectivity.py  test_extract_parse.py  test_models.py  test_neo4j_graph.py  test_profile.py  test_proposal.py  test_tools.py  test_utils.py
(+20 files in other folders)
